@@ -28,6 +28,14 @@ on it, a browser is opend.
 It is also possible on debian systems to reconfigure debconf packages.
 This is done with the help of libgnome-perl that needs to be installed.
 
+On a debian system, you can have more than one "release" in your
+sources.list file. You can choose which one to use in the "expert" tab
+in the preferences dialog. The source has already support to decide
+what release to use on a per-package basis. This needs a
+representation in the GUI though, ideas/patches are welcome. Using
+more than one release is not recommended, because it not tested very
+well. 
+
 All development is done at http://savannah.gnu.org/projects/synaptic
 
 Tutorial:
