@@ -1,4 +1,3 @@
-
 Configure:
    - allways give the correct path in the synaptic.desktop file
      (currently hardcoded)
