@@ -94,3 +94,14 @@ gchar *s = N_("1 = Information area\n"
 gchar *s = N_("<b>Note:</b> You will need to restart synaptic for \n"
               "this setting to take effect.");
 gchar *s = N_("Layout");
+gchar *s = N_("<b>Distribution:</b>");
+gchar *s = N_("Default release: ");
+gchar *s = N_("ignore (always use latest package version)");
+gchar *s = N_("stable");
+gchar *s = N_("testing");
+gchar *s = N_("unstable");
+gchar *s = N_("If you have more than one Release in your sources.list files,\n"
+              "you may choose here which to use by default");
+gchar *s = N_("<b>Note:</b> After changing the default release the cache needs \n"
+              "to be reread and all selections will be lost (commit you changes first)");
+gchar *s = N_("Expert");
