@@ -9,6 +9,8 @@
  - new quit dialog
  - speedup for the pattern filters
  - small ui-enhancements in the filter dialog
+ - basic support for distribution selection (if you have more than one
+   distro in your sources.list, you can choose which to use by default)
 
 0.44
  - two alternative main layouts can be choosen now
